; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_platform_lcd.c_platform_lcd_set_power.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_platform_lcd.c_platform_lcd_set_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lcd_device = type { i32 }
%struct.platform_lcd = type { i32, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 (%struct.TYPE_2__*, i32)* }

@FB_BLANK_POWERDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lcd_device*, i32)* @platform_lcd_set_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @platform_lcd_set_power(%struct.lcd_device* %0, i32 %1) #0 {
  %3 = alloca %struct.lcd_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.platform_lcd*, align 8
  %6 = alloca i32, align 4
  store %struct.lcd_device* %0, %struct.lcd_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.lcd_device*, %struct.lcd_device** %3, align 8
  %8 = call %struct.platform_lcd* @to_our_lcd(%struct.lcd_device* %7)
  store %struct.platform_lcd* %8, %struct.platform_lcd** %5, align 8
  store i32 1, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @FB_BLANK_POWERDOWN, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load %struct.platform_lcd*, %struct.platform_lcd** %5, align 8
  %14 = getelementptr inbounds %struct.platform_lcd, %struct.platform_lcd* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %2
  store i32 0, i32* %6, align 4
  br label %18

18:                                               ; preds = %17, %12
  %19 = load %struct.platform_lcd*, %struct.platform_lcd** %5, align 8
  %20 = getelementptr inbounds %struct.platform_lcd, %struct.platform_lcd* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32 (%struct.TYPE_2__*, i32)*, i32 (%struct.TYPE_2__*, i32)** %22, align 8
  %24 = load %struct.platform_lcd*, %struct.platform_lcd** %5, align 8
  %25 = getelementptr inbounds %struct.platform_lcd, %struct.platform_lcd* %24, i32 0, i32 1
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 %23(%struct.TYPE_2__* %26, i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = load %struct.platform_lcd*, %struct.platform_lcd** %5, align 8
  %31 = getelementptr inbounds %struct.platform_lcd, %struct.platform_lcd* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  ret i32 0
}

declare dso_local %struct.platform_lcd* @to_our_lcd(%struct.lcd_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
